+ fixed Bug 1099103 by fixing HasGroup in ParameterPy

Version: V0.1B107 Date: Tue Jan 11 11:16:46 2005 +++++++++++++++++++++++++++++++
+ put Application and Document (and helper classes) in namespace App
+ put exception handling into ParameterPy wrapper
+ PIMPLE document in class and py class
+ put the whole document python methodes with the macros and exceptions
+ removing doctype and put Feature handling into the document
+ Bug 1100780 fixed (no color in editor after first start)

Version: V0.1B108 Date: Sat Jan 15 14:24:52 2005 +++++++++++++++++++++++++++++++
+ Moved HtmlView to HelpView + Reimplementaion
+ Added class FileChooser ( line edit with button on its right side to browse)
+ Merged pref. page "Help viewer" and "Online Help" to one page
+ TextEdit class with completion

Version: V0.1B109 Date: Mon Jan 24 11:13:15 2005 +++++++++++++++++++++++++++++++
+ plugin containing FreeCAD's specific widgets
  Note: You have to build the sources under src/Tools/plugins/widgets and
        copy the library to $QTDIR/plugins/designer to make use of them
+ Changing loging
  - -l option switch the file log on
  - -lf to a special file
  - SetStatus and GetStatus switch on or off the observer

Version: V0.1B110 Date: Fri Jan 28 16:38:29 2005 +++++++++++++++++++++++++++++++
+ fix 1110577
+ finish macro module switching

Version: V0.1B111 Date: Sun Jan 30 19:02:55 2005 +++++++++++++++++++++++++++++++
+ reactivate Inventor viewer
+ build in examples
+ new view commands

Version: V0.1B112 Date: Mon Jan 31 01:57:33 2005 +++++++++++++++++++++++++++++++
+ redesign of PrefWidgets

Version: V0.1B113 Date: Fri Feb 11 00:47:38 2005 +++++++++++++++++++++++++++++++
+ realize code guidelines in Gui
+ Patch 1119485 inserted
+ Method to class Tools added to convert between SbSFImage and QImage

Version: V0.1B114 Date: Sun Feb 13 17:07:39 2005 +++++++++++++++++++++++++++++++
+ Encapsulation of 'wget' in NetworkRetriever
+ RFE 1100311 Message if wget cannot be found