@@ -35,9 +35,6 @@
 #include "../../../Gui/Command.h"
 
 
-#include "../../../Gui/Icons/images.cpp"
-
-
 //++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 //===========================================================================
